--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,8 +1,22 @@
-body {
-margin: 0;
-padding: 0;
-font-family: Arial, sans-serif;
-}
+/* styles.css */
+
+.video {
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    transition: transform 0.3s ease, z-index 0s linear 0.3s;
+  }
+
+  .video iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+  
 .background {
 position: fixed;
 top: 0;
